--- a/src/1-gallery.html
+++ b/src/1-gallery.html
@@ -6,12 +6,40 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Gallery</title>
     <link rel="stylesheet" href="./css/styles.css" />
+    <link rel="icon" type="image/svg+xml" href="./img/logo.svg" />
   </head>
   <body>
+    <header class="header">
+      <div class="container">
+        <nav class="nav">
+          <a class="nav-logo" href="./index.html" aria-label="Site logo">
+            <svg class="nav-logo-icon" width="100" height="30">
+              <use href="./img/logo.svg"></use>
+            </svg>
+          </a>
+          <ul class="nav-list">
+            <li class="nav-item">
+              <a class="back-link" href="./1-gallery.html">Gallery</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link {=$highlight-act}" href="./2-form.html"
+                >Form</a
+              >
+            </li>
+            <li class="nav-item">
+              <a class="nav-link {=$highlight-curr}" href="./index.html"
+                >Go back</a
+              >
+            </li>
+          </ul>
+        </nav>
+      </div>
+    </header>
     <main>
       <div class="container">
         <a class="back-link" href="./index.html">Go back</a>
         <h1 class="main-title">Gallery</h1>
+        <ul class="gallery"></ul>
       </div>
     </main>
     <script type="module" src="./js/1-gallery.js"></script>
