--- a/src/2-form.html
+++ b/src/2-form.html
@@ -6,12 +6,50 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Form</title>
     <link rel="stylesheet" href="./css/styles.css" />
+    <link rel="icon" type="image/svg+xml" href="./img/logo.svg" />
   </head>
   <body>
-    <main>
+    <header class="header">
       <div class="container">
-        <a class="back-link" href="./index.html">Go back</a>
-        <h1 class="main-title">Form</h1>
+        <nav class="nav">
+          <a class="nav-logo" href="./index.html" aria-label="Site logo">
+            <svg class="nav-logo-icon" width="100" height="30">
+              <use href="./img/logo.svg"></use>
+            </svg>
+          </a>
+          <ul class="nav-list">
+            <li class="nav-item">
+              <a class="nav-link {=$highlight-act}" href="./1-gallery.html"
+                >Gallery</a
+              >
+            </li>
+            <li class="nav-item">
+              <a class="back-link" href="./2-form.html">Form</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link {=$highlight-curr}" href="./index.html"
+                >Go back</a
+              >
+            </li>
+          </ul>
+        </nav>
+      </div>
+    </header>
+  </body>
+</html>
+ <main>
+      <div class="container">
+        <form class="feedback-form" autocomplete="off">
+          <label>
+            Email
+            <input type="email" name="email" autofocus />
+          </label>
+          <label>
+            Message
+            <textarea name="message" rows="8"></textarea>
+          </label>
+          <button type="submit">Submit</button>
+        </form>
       </div>
     </main>
     <script type="module" src="./js/2-form.js"></script>
